# atomic-swap-adapter-sigs

./: .editorconfig  .gitignore  .hlint.yaml  .hspec-failures  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION-PLAN.md  PROTOCOL.md  README.md  STATUS.md  TUTORIAL.md  atomic-swap-adapter-sigs.cabal  cabal.project  flake.nix  hie.yaml  treefmt.toml
.claude/: settings.local.json
.claude/commands/: collab.md
.github/workflows/: deploy-mdbook.yml
app/: Main.hs
doc/: .gitignore  book.toml
doc/src/: 00-shared-concepts.md  01-happy-path.md  02-monero-user-griefs.md  03-cardano-user-never-locks.md  04-cardano-user-locks-abandons.md  05-technical-failure.md  SUMMARY.md  introduction.md  proof-plan.md
protocol/: 01-happy-path.md  02-monero-user-griefs.md  03-cardano-user-never-locks.md  05-technical-failure.md  06-state-machines.md
research/: 2025-11-14-ed25519-adapter-signatures.md  2025-11-14-two-party-atomic-swap-protocol.md
src/AtomicSwap/: Logging.hs  Prelude.hs  Types.hs
src/AtomicSwap/Blockchain/: Ledger.hs  Transaction.hs  Types.hs
src/AtomicSwap/Crypto/: Adapter.hs  Keys.hs  NIZK.hs  Signatures.hs
src/AtomicSwap/Protocol/: Alice.hs  Bob.hs  Messaging.hs
src/AtomicSwap/Simulator/: Actions.hs  Class.hs  Render.hs  Run.hs  State.hs  Steps.hs  Types.hs
src/AtomicSwap/Simulator/Render/: Actions.hs  Explanations.hs  Helpers.hs  State.hs  Timeline.hs
src/AtomicSwap/Simulator/Types/: Orphans.hs
src/AtomicSwap/Types/: Orphans.hs
src/Data/IORef/: Strict.hs
static/: style.css
test/AtomicSwap/: BlockchainSpec.hs  CryptoSpec.hs  ErrorHandlingSpec.hs  HappyPathSpec.hs  RefundSpec.hs
