cabal-version: 3.4
name:          atomic-swap-adapter-sigs
version:       0.1.0.0
synopsis:
  Educational tutorial on atomic swaps using adapter signatures

description:
  An interactive Haskell tutorial demonstrating end-to-end atomic swaps
  between two blockchains using adapter signatures. Features multi-threaded
  execution, verbose logging, and comprehensive documentation.

author:        Yura
license:       Apache-2.0
category:      Blockchain, Education

common common-deps
  build-depends:
    , aeson
    , async
    , base               >=4.16
    , base16-bytestring
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , directory
    , foldl
    , http-types
    , io-classes
    , io-sim
    , lucid2             ^>=0.0.20221012
    , memory
    , mtl
    , nothunks           ^>=0.2
    , relude             ^>=1.2.2
    , stm
    , strict             ^>=0.5
    , strict-containers  ^>=0.2
    , text
    , wai                ^>=3.2
    , wai-app-static     ^>=3.1
    , warp               ^>=3.3

common common-language
  import:             common-deps
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wpartial-fields -Wmissing-deriving-strategies
    -Werror=missing-fields -fprint-explicit-foralls -Widentities
    -Wredundant-bang-patterns -Wunused-type-patterns

  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude (Relude)

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications

library
  import:          common-language
  exposed-modules:
    AtomicSwap.Blockchain.Ledger
    AtomicSwap.Blockchain.Transaction
    AtomicSwap.Blockchain.Types
    AtomicSwap.Crypto.Adapter
    AtomicSwap.Crypto.Keys
    AtomicSwap.Crypto.NIZK
    AtomicSwap.Crypto.Signatures
    AtomicSwap.Logging
    AtomicSwap.Prelude
    AtomicSwap.Protocol.Alice
    AtomicSwap.Protocol.Bob
    AtomicSwap.Protocol.Messaging
    AtomicSwap.Simulator.Class
    AtomicSwap.Simulator.Render
    AtomicSwap.Simulator.Run
    AtomicSwap.Simulator.State
    AtomicSwap.Simulator.Steps
    AtomicSwap.Simulator.Types
    AtomicSwap.Simulator.Types.Orphans
    AtomicSwap.Types
    AtomicSwap.Types.Orphans
    Data.IORef.Strict

  hs-source-dirs:  src

executable atomic-swap-simulator
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  atomic-swap-adapter-sigs

test-suite atomic-swap-tests
  import:             common-language
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    AtomicSwap.BlockchainSpec
    AtomicSwap.CryptoSpec
    AtomicSwap.ErrorHandlingSpec
    AtomicSwap.HappyPathSpec
    AtomicSwap.RefundSpec

  build-depends:
    , atomic-swap-adapter-sigs
    , hspec
    , QuickCheck
    , quickcheck-instances
    , temporary

  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
